--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,26 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.1.3",
         "barryvdh/laravel-cors": "^0.11.2",
         "fideloper/proxy": "~4.0",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "^5.8.0",
         "laravel/passport": "^7.0",
         "laravel/tinker": "~1.0",
         "sarala-io/laravel-companion": "~0.0.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
-        "nunomaduro/collision": "~1.1",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
+        "nunomaduro/collision": "~1.1",
         "phpunit/phpunit": "~7.0"
     },
     "autoload": {
@@ -36,8 +39,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
